# Systemy_Operacyjne_proj1

./: CMakeLists.txt  README.md  dane_do_testu_poprawnosci.txt  main.cpp
AlgoTest/: GenerateResults.cpp  MSTtest.cpp  SPTest.cpp  Tests.h
Algorithms/: Algorithms.h  DjikstraMulti.cpp  MSTalg.cpp  ShortestPathAlg.cpp
DataStructures/: DisjointSet.h  Graph.h  MinHeap.h  MinHeapDist.h  Stack.h
GUI/: GUI.h  MSTMenu.cpp  MainMenu.cpp  ShortestPathMenu.cpp
Tests/: TestScenarios.cpp  Tests.cpp  Tests.h
Utilities/: FileHandler.cpp  GraphGeneration.cpp  Utilities.h
